# WebSearch-MCP

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CLIENT_SETUP.md  CLIENT_SETUP_EN.md  DEVELOPMENT.md  DEVELOPMENT_ROADMAP.md  EXTERNAL_PROJECT_ANALYSIS.md  Original MCP Concept Post.md  README_EN.md  SEARCH_TIMEOUT_AND_CONCURRENCY_TASK.md
src/grok_search/: __init__.py  app.py  budget.py  concurrency.py  config.py  lifecycle.py  logger.py  models.py  planning.py  prompts.py  protocol.py  server.py  sources.py  tavily_reliability.py
src/grok_search/clients/: __init__.py  grok.py  tavily.py
src/grok_search/tools/: __init__.py  configuration.py  planning.py  web.py
tests/: conftest.py  test_cache.py  test_config.py  test_grok_client.py  test_mcp_schema.py  test_response_protocol.py  test_search_quality.py  test_stdio.py  test_tavily_client.py  test_tavily_reliability.py  test_timeout_concurrency.py  test_tools.py
